--- a/authtest/templates/base.html
+++ b/authtest/templates/base.html
@@ -32,7 +32,7 @@
                                                 <a href="/home">home</a>
                                             </li>
                                             <li>
-                                                <a href="#">Another action</a>
+                                                <a href="/register">Sign Up</a>
                                             </li>
                                             <li>
                                                 <a href="#">Something else here</a>
