--- a/authtest/templates/home.html
+++ b/authtest/templates/home.html
@@ -6,7 +6,15 @@
     <div class="row">
         <div class="jumbotron">
             <h1>Auction Homepage</h1>
-            
+            <table>
+            {% for item in item_list %}
+                <tr>
+                    <td><p>{{ item.name }}</p></td>
+                    <td><p>{{ item.price }}€</p></td>
+                    <td><input class="btn btn-success btn-sm" type="submit" value="Bid"></td>
+                </tr>
+            {% endfor %}
+            </table>
         </div>
     </div>
 </div>
