--- a/authtest/templates/base.html
+++ b/authtest/templates/base.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Auth Demo</title>
+                <title>Secure Auction House</title>
                 <!-- Core CSS - Include with every page -->
                 <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
                 </head>
@@ -19,7 +19,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand" href="#">Rocky Balbo</a>
+                                <a class="navbar-brand" href="#"></a>
                             </div>
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
